# jir_agent

./: .gitignore  DASHBOARD_SUMMARY.md  README.md  analytics.py  analytics_tools.py  config.py  dashboard_app.py  install.py  jira_client.py  llm_client.py  main.py  phi_jira_agent_final.py  pyproject.toml  requirements.txt  setup.py  simple_jira_tools.py
